1.0.0-beta4:
    * Fix crash when holding a grass slab.

1.0.0-beta3:
    * Fix block breaking particles not having textures, fixes #7.
    * Fix crash when placing blocks, fixes #13.
    * Fix crash when looking up the recipe for the double slabs.
    * Fix blocks dropping items when breaking them in creative mode, fixes #9.
    * Fix silk touching blocks and their drops, fixes #8.
    * Fix the trowel not respecting the top/side/bottom textures of materials, fixes #6.
    * Change the way the trowel consumes blocks to be more smart, fixes #10.
    * Add keybindings to switch the trowel's block type, fixes #3.

1.0.0-beta2:
    * Fix grass slabs not having a name and creative tab.
    * Fix the trowel not placing the blocks client-side, fixes #4.
    * Fix crash when running on servers, fixes #5.
    * Fix blocks third-person rendering size.

1.0.0-beta1:
    * Initial release